--- a/app/views/spree/checkout/payment/_cielo_order_details.html.erb
+++ b/app/views/spree/checkout/payment/_cielo_order_details.html.erb
@@ -1,17 +1,9 @@
-<%  
-cielo_product = case @order.payment_method.class.name
-  when "Spree::PaymentMethod::CieloRegularMethod" then "crédito"
-  when "Spree::PaymentMethod::CieloDebitMethod" then "débito"
-  else ""
-end
-%>
-
-<% if @order.payment_method.class == Spree::PaymentMethod::CieloRegularMethod || @order.payment_method.class ==Spree::PaymentMethod::CieloDebitMethod %>
+<% if @order.payments.last.payment_method.instance_of? Spree::PaymentMethod::CieloRegularMethod %>
 	<% cc_type = @order.payments.last.source.cc_type.capitalize  %>
 	<br/>
-  <% if @order.payment.completed? %>
+  <% if @order.payments.last.completed? %>
     Transação autorizada por <%= cc_type %>.
-  <% elsif @order.payment.processing? || @order.payment.pending? %>
+  <% elsif @order.payments.last.processing? || @order.payments.last.pending? %>
 		Aguardando confirmação de pagamento por <%= cc_type %>. Esta ação pode levar alguns minutos.<br>
 		<%= link_to "Verificar novamente", 
 			verify_cielo_path(:order_number => @order.number, :payment_id => @order.payments.last.id), 
@@ -19,7 +11,7 @@ end
 		%>
   <% else %>
 		Transação não autorizada por <%= cc_type %>. 
-		<%= link_to "Pagar com #{cielo_product} #{cc_type}", 
+		<%= link_to "Pagar com #{cc_type}", 
 			reauthenticate_cielo_path(:order_number => @order.number, :payment_id => @order.payments.last.id), 
 			:class => "btn btn-primary" 
 		%>
