--- a/app/assets/stylesheets/store/payment.css
+++ b/app/assets/stylesheets/store/payment.css
@@ -1,1 +1,6 @@
+/* 
+ *= require msdropdown/dd
+*/
+
 #payment p.avista, #payment p.parcelas { padding:0px; display:none;}
+.dd { width:220px !important; }
