- Remoção de parcelas baixo de R$ 5,00; - Erro do Dropdown que abria apenas 1 item; - Dropdown agora abrirá apenas para baixo;

--- a/app/assets/stylesheets/store/payment.css
+++ b/app/assets/stylesheets/store/payment.css
@@ -3,4 +3,5 @@
 */
 
 #payment p.avista, #payment p.parcelas { padding:0px; display:none;}
-.dd { width:220px !important; }
+.dd { width:220px !important; margin-bottom:10px;}
+.dd .ddChild li { height: 44px; }
